<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.njz.letsgoappguides.ui.activites.RegisterActivity">


    <include layout="@layout/base_title_layout"></include>
    <ImageView
        android:layout_gravity="center"
        android:layout_margin="@dimen/x_px_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        />

    <com.njz.letsgoappguides.customview.widget.RegisterItemView
        android:id="@+id/reg_input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:register_item_max_length="11"
        app:register_item_hint="@string/input_phone"
        ></com.njz.letsgoappguides.customview.widget.RegisterItemView>

    <com.njz.letsgoappguides.customview.widget.RegisterItemView
        android:id="@+id/reg_input_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:register_item_hint="@string/input_crad"
        app:register_item_max_length="6"
        app:register_item_right_drawable="@drawable/mine_un"
        app:register_item_right_text="@string/input_get_card"
        ></com.njz.letsgoappguides.customview.widget.RegisterItemView>

    <com.njz.letsgoappguides.customview.widget.RegisterItemView
        android:id="@+id/reg_input_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:register_item_max_length="12"
        app:register_item_hint="@string/input_psd"
        ></com.njz.letsgoappguides.customview.widget.RegisterItemView>

    <com.njz.letsgoappguides.customview.widget.RegisterItemView
        android:id="@+id/reg_input_pwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:register_item_max_length="12"
        app:register_item_hint="@string/input_psd2"
        ></com.njz.letsgoappguides.customview.widget.RegisterItemView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/x_px_40"
        android:layout_marginTop="@dimen/x_px_16">
        <ImageView
            android:id="@+id/iv_isagreement"
            android:layout_marginTop="@dimen/x_px_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/reg_check"
            />
        <TextView
            android:layout_marginLeft="@dimen/x_px_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_check"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_check_word"
            android:textSize="12sp"
            android:textColor="@color/blue"/>
    </LinearLayout>

    <TextView
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/y_px_64"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:id="@+id/register_in_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x_px_40"
        android:text="@string/register_button2"
        android:textColor="@color/white"
        android:background="@drawable/login_btn_style"/>


</LinearLayout>
