<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.njz.letsgoappguides.ui.activites.LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@mipmap/login_bg" />
        <com.njz.letsgoappguides.customview.widget.TitleView
            android:visibility="gone"
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:TitleView_left_img="@mipmap/icon_back"
            app:TitleView_title="登录"
            app:TitleView_visible="true"
            app:TitleView_line_visible="true"/>
    </RelativeLayout>

    <com.njz.letsgoappguides.customview.widget.LoginItemView
        android:id="@+id/login_view_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_px_26"
        app:login_item_hint="@string/login_input_phone"
        app:login_item_max_length="20"
        app:login_item_right_drawable="@mipmap/phone" />

    <com.njz.letsgoappguides.customview.widget.LoginItemView
        android:id="@+id/login_view_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:login_item_hint="请输入登录密码"
        app:login_item_max_length="12"
        app:login_item_right_drawable="@mipmap/psd"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x_px_60"
        android:layout_marginRight="@dimen/x_px_60"
        android:layout_marginTop="@dimen/x_px_10"
        >
        <TextView
            android:id="@+id/login_tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_card"
            android:textColor="@color/color_text"
            />
        <TextView
            android:id="@+id/login_tv_pass"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgit_pwd"
            android:textColor="@color/color_2585e7"
            />
    </RelativeLayout>


    <TextView
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="@dimen/x_px_60"
        android:layout_marginLeft="@dimen/x_px_38"
        android:layout_marginRight="@dimen/x_px_38"
        android:id="@+id/login_in_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x_px_40"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:background="@drawable/login_btn_style"/>

    <TextView
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="@dimen/y_px_15"
        android:layout_marginLeft="@dimen/x_px_38"
        android:layout_marginRight="@dimen/x_px_38"
        android:id="@+id/register_in_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x_px_40"
        android:text="@string/register_button"
        android:textColor="@color/color_theme"
        android:background="@drawable/register_btn_style"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/ll_agreement"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textSize="12sp"
                tools:text="@string/login_user_agreement" />

            <TextView
                android:id="@+id/tv_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textSize="12sp"
                tools:text="@string/login_privacy_policy" />

        </LinearLayout>



    </RelativeLayout>



</LinearLayout>
