<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal"
    >

    <include layout="@layout/base_title_layout"></include>

    <ImageView
        android:layout_margin="@dimen/x_px_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        />
    <com.njz.letsgoappguides.customview.widget.RegisterItemView
        android:id="@+id/setphone_input_psd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:register_item_hint="请输入密码"
        ></com.njz.letsgoappguides.customview.widget.RegisterItemView>

    <com.njz.letsgoappguides.customview.widget.RegisterItemView
        android:id="@+id/setphone_input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:register_item_hint="@string/input_phone"
        ></com.njz.letsgoappguides.customview.widget.RegisterItemView>

    <com.njz.letsgoappguides.customview.widget.RegisterItemView
        android:id="@+id/setphone_input_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:register_item_hint="@string/input_crad"
        app:register_item_max_length="11"
        app:register_item_right_drawable="@drawable/mine_un"
        app:register_item_right_text="@string/input_get_card"
        ></com.njz.letsgoappguides.customview.widget.RegisterItemView>

    <TextView
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/y_px_40"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/setphone_in_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x_px_40"
        android:text="提交"
        android:textColor="@color/white"
        android:background="@drawable/login_btn_style"/>


</LinearLayout>



