<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.njz.letsgoappguides.ui.MainActivity">

    <com.njz.letsgoappguides.customview.MyViewPager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rg_main" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/rg_main"
        android:background="@color/color_d9" />


    <LinearLayout
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="3dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_icon_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_icon_1"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:src="@drawable/main_menu" />

            <TextView
                android:id="@+id/tv_icon_1"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_icon_1"
                android:gravity="center"
                android:text="@string/main_menu_home"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_icon_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_icon_2"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:src="@drawable/main_menu_selection" />

            <TextView
                android:id="@+id/tv_icon_2"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_icon_2"
                android:gravity="center"
                android:text="@string/main_menu_serve"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_icon_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_icon_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/main_menu_message" />

            <TextView
                android:id="@+id/tv_icon_3"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_icon_3"
                android:gravity="center"
                android:text="@string/main_menu_message"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_num"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignRight="@+id/iv_icon_3"
                android:layout_marginTop="3dp"
                android:background="@drawable/oval_red2"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone"
                tools:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_icon_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_icon_4"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:src="@drawable/main_menu_icon" />

            <TextView
                android:id="@+id/tv_icon_4"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_icon_4"
                android:gravity="center"
                android:text="@string/main_menu_mysetting"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
